🐗🌠 Checkpoint ./views/partials/listcomments.hbs:27940396/39 ./server.js:27940396/46

--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -14,7 +14,7 @@
         <br>
         {{userId}}
       </div>
-{{#ifEquals loggedInUser.id userId}}
+{{#ifCurrentUser userId}}
        <a href = "/about/deleteComment/{{id}}" class="reply">Delete</a>
       <a onclick="showHideLeague()" class="reply">Edit</a>
       <form class = "ui fluid segment form" id="league" action="/about/updateComment/{{id}}" method="POST">
