🚝💸 Checkpoint ./controllers/about.js:27940396/263 ./server.js:27940396/231 ./views/about.hbs:27940396/24 ./views/partials/listcomments.hbs:27940396/30

--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -10,7 +10,8 @@
         <span class="date">{{formatDate date}}</span>
       </div>
       <div class="text">
-        {{text}}
+        {{text}}<br>
+        {{currentUserId}}
       </div>
       {{#ifEquals userId}}
        <a href = "/about/deleteComment/{{id}}" class="reply">Delete</a>
