🚟☺️ Checkpoint ./views/partials/listcomments.hbs:27940396/50 ./controllers/about.js:27940396/14 ./models/comment-store.json:27940396/10

--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -15,7 +15,7 @@
       </div>
       {{#ifEquals userId}}
        <a href = "/about/deleteComment/{{id}}" class="reply">Delete</a>
-      <a onclick="showEdit({{id}})" class="reply">Edit</a>
+      <button onclick="showEdit({{id}})" class="reply">Edit</button>
       <form class = "ui fluid segment form" id="{{id}}" action="/about/updateComment/{{id}}" method="POST">
         <div class="field">
         <span class="ui input">
