--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -15,8 +15,8 @@
       </div>
       {{#ifEquals userId}}
        <a href = "/about/deleteComment/{{id}}" class="reply">Delete</a>
-      <button onclick="showEdit({{id}})" class="reply">Edit</button>
-      <form class = "ui fluid segment form" id="{{id}}" action="/about/updateComment/{{id}}" method="POST">
+      <button onclick="showEdit('_{{id}}')" class="reply">Edit</button>
+      <form class = "ui fluid segment form" id="_{{id}}" action="/about/updateComment/{{id}}" method="POST">
         <div class="field">
         <span class="ui input">
          <input type="text" name="text" autofocus required title = "Please include some edited text" placeholder="Position" value = "{{text}}"> 
