🦄🐇 Checkpoint ./controllers/about.js:27940396/94 ./views/about.hbs:27940396/99 ./public/script.js:27940396/85

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -21,7 +21,7 @@
 </section>
 <div class = "ui segment">
 <h3 class="ui dividing header">Comments</h3>
-<div class="ui comments">
+<div class="ui comments" onload="hideDelete({{currentId}})">
 {{>listcomments}}
 </div>
 {{>addcomment}}
