🍟🌍 Checkpoint ./public/script.js:27940396/453 ./views/about.hbs:27940396/106 ./public/style.css:27940396/33 ./controllers/about.js:27940396/397

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -19,6 +19,9 @@
 
 
 </section>
+<button onclick="hideDelete({{currentId}})">
+  Test
+</button>
 <div class = "ui segment">
 <h3 class="ui dividing header">Comments</h3>
 <div class="ui comments" onload="hideDelete({{currentId}})">
