--- a/views/about.hbs
+++ b/views/about.hbs
@@ -19,12 +19,12 @@
 
 
 </section>
-<button onclick="hideDelete({{currentId}})">
+<button onclick="hideDelete('{{currentId}}')">
   Test
 </button>
 <div class = "ui segment">
 <h3 class="ui dividing header">Comments</h3>
-<div class="ui comments" onload="hideDelete({{currentId}})">
+<div class="ui comments" onload="hideDelete('{{currentId}}')">
 {{>listcomments}}
 </div>
 {{>addcomment}}
