😇🏎 Checkpoint ./public/script.js:27940396/303 ./views/partials/listcomments.hbs:27940396/10

--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -12,7 +12,7 @@
       <div class="text">
         {{text}}
       </div>
-      <div class="deleteEdit" id="i{{id}}">
+      <div class="deleteEdit" id="i{{userId}}">
        <a href = "/about/deleteComment/{{id}}" class="reply">Delete</a>
       <button onclick="showEdit('_{{id}}')" class="reply">Edit</button>
       </div>
