🏠💂 Checkpoint ./views/about.hbs:27940396/182 ./views/partials/listcomments.hbs:27940396/62

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -19,10 +19,10 @@
 
 
 </section>
-<button onclick="hideDelete('{{currentId}}')">
-  Test
-</button>
 <div class = "ui segment">
+  <button onclick="hideDelete('{{currentId}}')" class="ui fluid button">
+  Allow Editing/Deleting
+</button>
 <h3 class="ui dividing header">Comments</h3>
 <div class="ui comments" >
 {{>listcomments}}
