🎩🚝 Checkpoint ./views/partials/listcomments.hbs:27940396/921 ./views/about.hbs:27940396/252 ./views/partials/menu.hbs:27940396/235 ./public/script.js:27940396/177 ./public/style.css:27940396/64

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -20,13 +20,13 @@
 
 </section>
 <div class = "ui segment">
-  <button onclick="hideDelete('{{currentId}}')" class="ui fluid button">
-  Allow Editing/Deleting
-</button>
+ 
 <h3 class="ui dividing header">Comments</h3>
 <div class="ui comments" >
 {{>listcomments}}
 </div>
 {{>addcomment}}
-    
+     <button onclick="hideDelete('{{currentId}}')" class="ui button">
+  Allow Editing/Deleting
+</button>
 </div>
