--- a/views/about.hbs
+++ b/views/about.hbs
@@ -20,13 +20,15 @@
 
 </section>
 <div class = "ui segment">
- 
+  <div class = "ui center aligned container">
+  <button onclick="hideDelete('{{currentId}}')" class="ui button">
+  Allow Editing/Deleting
+</button>
+  </div>
 <h3 class="ui dividing header">Comments</h3>
 <div class="ui comments" >
 {{>listcomments}}
 </div>
 {{>addcomment}}
-     <button onclick="hideDelete('{{currentId}}')" class="ui button">
-  Allow Editing/Deleting
-</button>
+    
 </div>
