--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -13,11 +13,13 @@
         {{text}}
       </div>
       <div class="deleteEdit" id="i{{userId}}">
-        <div class="ui mini buttons">
+        <div class="right aligned actions">
+        <div class="ui vertical mini buttons">
     <a class="ui red button" href = "/about/deleteComment/{{id}}">Delete</a>
     <div class="or" data-text="or"></div>
     <button onclick="showEdit('_{{id}}')" class="ui blue button">Edit</button>
-  </div>
+          </div>
+        </div>
       </div>
       <form class = "ui fluid segment form" id="_{{id}}" action="/about/updateComment/{{id}}" method="POST">
         <div class="field">
