--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -12,16 +12,13 @@
       <div class="text">
         {{text}}
       </div>
-      <div class="deleteEdit" id="i{{userId}}">
-        <div class="right aligned actions">
-        <div class="ui vertical mini buttons">
-    <a class="ui red button" href = "/about/deleteComment/{{id}}">Delete</a>
-    <div class="or" data-text="or"></div>
-    <button onclick="showEdit('_{{id}}')" class="ui blue button">Edit</button>
-          </div>
+        <div class="actions">
+          <div class="deleteEdit" id="i{{userId}}">
+    <a class="reply" href = "/about/deleteComment/{{id}}">Delete</a>
+    <a onclick="showEdit('_{{id}}')" class="reply">Edit</a>
         </div>
       </div>
-      <form class = "ui fluid segment form" id="_{{id}}" action="/about/updateComment/{{id}}" method="POST">
+      <form class = "ui fluid form" id="_{{id}}" action="/about/updateComment/{{id}}" method="POST">
         <div class="field">
         <span class="ui input">
          <input type="text" name="text" autofocus required title = "Please include some edited text" placeholder="Position" value = "{{text}}"> 
