--- a/views/about.hbs
+++ b/views/about.hbs
@@ -19,16 +19,17 @@
 
 
 </section>
-<div class = "ui segment">
+<div class = "ui segment" >
   <div class = "ui center aligned container">
   <button onclick="hideDelete('{{currentId}}')" class="ui button">
-  Allow Editing/Deleting
+  Show Comments
 </button>
   </div>
+  <div id="comments">
 <h3 class="ui dividing header">Comments</h3>
 <div class="ui comments" >
 {{>listcomments}}
 </div>
 {{>addcomment}}
-    
+    </div>
 </div>
