👴🚔 Checkpoint ./server.js:27940396/38 ./public/script.js:27940396/42 ./views/about.hbs:27940396/167 ./public/style.css:27940396/61 ./views/partials/listcomments.hbs:27940396/104

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -21,14 +21,13 @@
 </section>
 <div class = "ui segment" >
   <div class = "ui center aligned container">
-  <button onclick="hideDelete('{{currentId}}')" class="ui button">
-  Show Comments
-</button>
+
   </div>
   <div id="comments">
 <h3 class="ui dividing header">Comments</h3>
+    
 <div class="ui comments" >
-{{>listcomments}}
+{{>listcomments currentUserId=currentId}}
 </div>
 {{>addcomment}}
     </div>
