--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -10,8 +10,11 @@
         <span class="date">{{formatDate date}}</span>
       </div>
       <div class="text">
-        {{text}}
+        {{text}}<br>
+        {{currentUserId}}<br>
+        {{UserId}}
       </div>
+
         <div class="actions">
           <div class="deleteEdit" id="i{{userId}}">
     <a class="reply" href = "/about/deleteComment/{{id}}">Delete</a>
