💡📕 Checkpoint ./views/partials/listcomments.hbs:27940396/55 ./server.js:27940396/57

--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -10,9 +10,7 @@
         <span class="date">{{formatDate date}}</span>
       </div>
       <div class="text">
-        {{text}}<br>
-        {{currentUserId}}<br>
-        {{UserId}}
+        {{text}}
       </div>
 
         <div class="actions">
