⛈👫 Checkpoint ./views/partials/listcomments.hbs:27940396/59 ./public/script.js:27940396/460

--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -12,7 +12,7 @@
       <div class="text">
         {{text}}
       </div>
-
+{{#ifEquals userId ../currentId}}
         <div class="actions">
           <div class="deleteEdit" id="i{{userId}}">
     <a class="reply" href = "/about/deleteComment/{{id}}">Delete</a>
@@ -27,6 +27,7 @@
         </span>
       </div>
     </form>
+      {{/ifEquals}}
     </div>
   </div>
      {{/each}}
