🔮💾 Checkpoint ./server.js:27940396/853 ./views/partials/listteams.hbs:27940396/289

--- a/views/partials/listteams.hbs
+++ b/views/partials/listteams.hbs
@@ -33,6 +33,12 @@
                 class="ui centered small image"
                 src=" {{europeanleague}}"
               />
+        <span class="ui input">
+      <select name="genre" id="genre" style="padding:.6em 2.5em; border:solid lightgray 1px;border-radius:5px;">
+        <option value="{{genre}}" selected="selected">{{genre}}</option>
+        {{{populate genre}}}       
+      </select>       
+    </span>
       </td>
       <td>
       <img
