💍🚄 Checkpoint ./public/script.js:27940396/1163 ./views/partials/listcomments.hbs:27940396/3

--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -9,7 +9,7 @@
       <div class="metadata">
         <span class="date">{{formatDate date}}</span>
       </div>
-      <div class="text">
+      <div class="ui text">
         {{text}}
       </div>
 {{#ifEquals userId ../currentId}}
