🐣🌖 Checkpoint ./public/script.js:27940396/1418 ./views/about.hbs:27940396/13 ./views/partials/welcomemenu.hbs:27940396/19

--- a/views/partials/welcomemenu.hbs
+++ b/views/partials/welcomemenu.hbs
@@ -1,4 +1,4 @@
-<nav class="ui menu">
+<nav class="ui menu" id="welcomemenu">
   <header class="ui header item"> <a href="/"> <i class="volleyball ball icon"></i>Football Leagues</a></header>
   <div class="right menu">
     <a id="signup" class="item" href="/signup"> Signup  </a>
