🏪🌮 Checkpoint ./public/script.js:27940396/523 ./views/partials/menu.hbs:27940396/5

--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -9,7 +9,7 @@
 
 <span class="ui name">{{fullname}} <span class="profilepic"><img src="{{picture}}" class="ui avatar image"></span></span>
     <a id="logout" class="item" href="/logout"> Logout </a>
-      <button class="ui blue button" id="tgl" onclick = "darkMode()">
+      <button class="ui blue tiny button" id="tgl" onclick = "darkMode()">
     Toggle Darkmode <i class="window maximize outline icon"></i>
   </button>
 </nav>
