🚈🕵 Checkpoint ./public/script.js:27940396/292 ./views/partials/listleagues.hbs:27940396/48 ./views/partials/listteams.hbs:27940396/22 ./views/partials/menu.hbs:27940396/11 ./views/partials/listcomments.hbs:27940396/11 ./server.js:27940396/7

--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -5,7 +5,7 @@
       <img class="ui avatar" src={{avatar}}>
      </a>
     <div class="content">
-      <a class="author">{{username}}</a>
+      <a class="author">{{capitalise username}}</a>
       <div class="metadata">
         <span class="date">{{formatDate date}}</span>
       </div>
