--- a/views/partials/listteams.hbs
+++ b/views/partials/listteams.hbs
@@ -20,12 +20,12 @@
       </td>
       <td class="field">
         <span class="ui input">
-          <input type="text" name="name" required title = "Please include a valid Name" placeholder="Name" value = "{{name}}">
+          <input type="text" name="name" required title = "Please include a valid Name" placeholder="Name" value = "{{capitalise name}}">
         </span>
       </td>
       <td class="field">
         <span class="ui input">
-          <input type="text" name="manager" autofocus required title = "Please include a valid Manager" placeholder="Manager" value = "{{manager}}">         
+          <input type="text" name="manager" autofocus required title = "Please include a valid Manager" placeholder="Manager" value = "{{capitalise manager}}">         
         </span>
       </td>
       <td class="field">
