--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -7,7 +7,7 @@
   </div>
   <div class="right menu">
 
-<span class="ui name">{{fullname}} <span class="profilepic"><img src="{{picture}}" class="ui avatar image"></span></span>
+<span class="ui name">{{capitalise fullname}} <span class="profilepic"><img src="{{picture}}" class="ui avatar image"></span></span>
     <a id="logout" id="logout"class="item" href="/logout"> Logout </a>
       <button class="ui blue tiny button" id="tgl" onclick = "darkMode()">
     Toggle Darkmode <i class="window maximize outline icon"></i>
