--- a/views/partials/listleagues.hbs
+++ b/views/partials/listleagues.hbs
@@ -6,12 +6,12 @@
       <img class="ui medium image" src="{{logo}}">
     
     <div class="center aligned content">
-      <div class="header">{{name}}</div>
+      <div class="header">{{capitalise name}}</div>
       <div class="meta">
         <a>{{teams.length}} Team(s)</a>
       </div>
       <div class="center aligned description">
-        <span class = "bold"> Country: </span>{{country}} <br>
+        <span class = "bold"> Country: </span>{{capitalise country}} <br>
       <span class = "bold"> Continent: </span>{{continent}}<br>
       </div>
     </div>
