👂🚅 Checkpoint ./views/about.hbs:27940396/6 ./models/comment-store.js:27940396/87 ./public/script.js:27940396/10957

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -24,7 +24,7 @@
 
   </div>
   <div id="comments">
-<h3 class="ui dividing header" id="comments">Comments</h3>
+<h3 class="ui dividing header" id="commentsheader">Comments</h3>
     
 <div class="ui comments" >
 {{>listcomments currentUserId=currentId}}
