--- a/views/about.hbs
+++ b/views/about.hbs
@@ -24,7 +24,7 @@
 
   </div>
   <div id="comments">
-<h3 class="ui dividing header" id="commentsheader">Comments</h3>
+<h3 class="ui dividing header" >Comments</h3>
     
 <div class="ui comments" >
 {{>listcomments currentUserId=currentId}}
