--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -10,7 +10,7 @@
         <span class="date">{{formatDate date}}</span>
       </div>
       <div class="ui text">
-        {{text}}
+        {{capitalise text}}
       </div>
 {{#ifEquals userId ../currentId}}
         <div class="actions">
