--- a/views/partials/listleagues.hbs
+++ b/views/partials/listleagues.hbs
@@ -8,7 +8,8 @@
     <div class="center aligned content">
       <div class="header">{{capitalise name}}</div>
       <div class="meta">
-        <a>{{teams.length}} Team(s)</a>
+        <a>{{teams.length}} Team(s)</a><br>
+        {{formateDate date}}
       </div>
       <div class="center aligned description">
         <span class = "bold"> Country: </span>{{capitalise country}} <br>
