💨🚝 Checkpoint ./views/partials/listleagues.hbs:27940396/9 ./views/partials/listcomments.hbs:27940396/19 ./server.js:27940396/832 ./models/league-store.json:27940396/136

--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -7,10 +7,10 @@
     <div class="content">
       <a class="author">{{capitalise username}}</a>
       <div class="metadata">
-        <span class="date">{{formatDate date}}</span>
+        <span class="date">{{formatTime date}}</span>
       </div>
       <div class="ui text">
-        {{capitalise text}}
+        {{text}}
       </div>
 {{#ifEquals userId ../currentId}}
         <div class="actions">
