🤗🏭 Checkpoint ./views/partials/listcomments.hbs:27940396/34 ./views/partials/listleagues.hbs:27940396/35 ./public/script.js:27940396/95 ./views/partials/listteams.hbs:27940396/38 ./server.js:27940396/125 ./views/partials/menu.hbs:27940396/11

--- a/views/partials/listcomments.hbs
+++ b/views/partials/listcomments.hbs
@@ -5,7 +5,7 @@
       <img class="ui avatar" src={{avatar}}>
      </a>
     <div class="content">
-      <a class="author">{{capitalise username}}</a>
+      <a class="author">{{username}}</a>
       <div class="metadata">
         <span class="date">{{formatTime date}}</span>
       </div>
@@ -15,7 +15,7 @@
 {{#ifEquals userId ../currentId}}
         <div class="actions">
           <div class="deleteEdit" id="i{{userId}}">
-    <a class="reply" href = "/about/deleteComment/{{id}}">Delete</a>
+    <a class="delcomment" href = "/about/deleteComment/{{id}}">Delete</a>
     <a onclick="showEdit('_{{id}}')" class="reply">Edit</a>
         </div>
       </div>
