🍉🌘 Checkpoint ./server.js:27940396/101 ./views/partials/listleagues.hbs:27940396/92 ./views/partials/listcomments.hbs:27940396/15 ./views/partials/menu.hbs:27940396/11 ./views/partials/listteams.hbs:27940396/115

--- a/views/partials/listteams.hbs
+++ b/views/partials/listteams.hbs
@@ -1,3 +1,4 @@
+
 <table class="ui fixed striped table">
   <thead>
     <tr>
@@ -25,7 +26,7 @@
       </td>
       <td class="field">
         <span class="ui input">
-          <input type="text" name="manager" autofocus required title = "Please include a valid Manager" placeholder="Manager" value = "{{manager}}">         
+          <input type="text" name="manager" autofocus required title = "Please include a valid Manager" placeholder="Manager" value = "{{capitalise manager}}">         
         </span>
       </td>
       <td class="field">
@@ -59,4 +60,5 @@
 <button class="ui blue button" onclick="getRating()">
   Rate it! <i class="star icon"></i>
 </button>
+
 
