🛎🎬 Checkpoint ./models/league-store.json:27940396/26 ./views/partials/listteams.hbs:27940396/24 ./views/partials/listleagues.hbs:27940396/22

--- a/views/partials/listleagues.hbs
+++ b/views/partials/listleagues.hbs
@@ -7,13 +7,13 @@
       <img class="ui medium image" src="{{logo}}">
     
     <div class="center aligned content">
-      <div class="header">{{capitalise name}}</div>
+      <div class="header">{{name}}</div>
       <div class="meta">
         <a>{{teams.length}} Team(s)<br>
         {{formatDate date}}</a>
       </div>
       <div class="center aligned description">
-        <span class = "bold"> Country: </span>{{capitalise country}} <br>
+        <span class = "bold"> Country: </span>{{country}} <br>
       <span class = "bold"> Continent: </span>{{continent}}<br>
       </div>
     </div>
