--- a/views/partials/listleagues.hbs
+++ b/views/partials/listleagues.hbs
@@ -7,7 +7,7 @@
       <img class="ui medium image" src="{{logo}}">
     
     <div class="center aligned content">
-      <div class="header">{{name}}</div>
+      <div class="header">{{capitalise name}}</div>
       <div class="meta">
         <a>{{teams.length}} Team(s)<br>
         {{formatDate date}}</a>
